<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/link_truckersmp_home"
        android:title="@string/action_truckersmp_home"
        android:icon="@drawable/ic_globe_24dp"
        app:showAsAction="never" />
    <item android:id="@+id/link_truckersmp_forum"
        android:title="@string/action_truckersmp_forum"
        android:icon="@drawable/ic_globe_24dp"
        app:showAsAction="never" />
    <item android:id="@+id/link_truckersmp_convoys"
        android:title="@string/action_truckersmp_convoys"
        android:icon="@drawable/ic_globe_24dp"
        app:showAsAction="never" />

</menu>