package cz.uruba.ets2mpcompanion.test;

import android.annotation.SuppressLint;
import android.content.SharedPreferences;
import android.preference.PreferenceManager;
import android.support.test.espresso.Espresso;
import android.support.test.espresso.matcher.ViewMatchers;
import android.support.v4.app.Fragment;
import android.support.v4.view.ViewPager;
import android.test.ActivityInstrumentationTestCase2;

import org.junit.After;
import org.junit.Before;

import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

import cz.uruba.ets2mpcompanion.MainActivity;
import cz.uruba.ets2mpcompanion.R;
import cz.uruba.ets2mpcompanion.fragments.MeetupListFragment;
import cz.uruba.ets2mpcompanion.fragments.ServerListFragment;
import cz.uruba.ets2mpcompanion.fragments.SettingsFragment;
import cz.uruba.ets2mpcompanion.test.utils.ViewPagerIdlingResource;
import okhttp3.mockwebserver.Dispatcher;
import okhttp3.mockwebserver.MockResponse;
import okhttp3.mockwebserver.MockWebServer;
import okhttp3.mockwebserver.RecordedRequest;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.swipeLeft;
import static android.support.test.espresso.action.ViewActions.swipeRight;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.hasDescendant;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static cz.uruba.ets2mpcompanion.test.matchers.WithToolbarTitle.withToolbarTitle;
import static org.hamcrest.CoreMatchers.allOf;
import static org.hamcrest.Matchers.is;

public class MainActivityTest extends ActivityInstrumentationTestCase2<MainActivity> {
    private MainActivity activity;
    private MockWebServer mockServer;
    private Dispatcher dispatcherGood, dispatcherBad;

    private final List<Integer> optionsMenuEntries = new ArrayList<>(
            Arrays.asList(
                    R.string.action_settings,
                    R.string.action_truckersmp_home,
                    R.string.action_truckersmp_forum,
                    R.string.action_truckersmp_convoys
            )
    );

    public MainActivityTest() {
        super(MainActivity.class);
    }

    @SuppressLint("CommitPrefEdits")
    @Override
    @Before
    protected void setUp() throws Exception {
        super.setUp();

        SharedPreferences prefs = PreferenceManager.getDefaultSharedPreferences(getActivity());
        SharedPreferences.Editor editor = prefs.edit();
        editor.putBoolean(SettingsFragment.PREF_AUTO_REFRESH_ENABLED, true);
        editor.putLong(SettingsFragment.PREF_AUTO_REFRESH_INTERVAL, 60 * 1000);
        editor.commit();

        mockServer = new MockWebServer();

        dispatcherGood = new Dispatcher() {

            @Override
            public MockResponse dispatch(RecordedRequest request) throws InterruptedException {

                switch (request.getPath()) {
                    case "/servers/":
                        return new MockResponse().setResponseCode(200).setBody("{\"error\":\"false\",\"response\":[{\"id\":1,\"game\":\"ETS2\",\"ip\":\"37.187.170.151\",\"port\":42860,\"name\":\"Europe 1\",\"shortname\":\"EU #1\",\"online\":true,\"players\":1330,\"maxplayers\":2300,\"speedlimiter\":1},{\"id\":3,\"game\":\"ETS2\",\"ip\":\"191.101.3.39\",\"port\":42860,\"name\":\"United states\",\"shortname\":\"US #1\",\"online\":true,\"players\":19,\"maxplayers\":1000,\"speedlimiter\":1},{\"id\":4,\"game\":\"ETS2\",\"ip\":\"151.80.230.166\",\"port\":42880,\"name\":\"Europe 2\",\"shortname\":\"EU #2\",\"online\":true,\"players\":1728,\"maxplayers\":2600,\"speedlimiter\":0},{\"id\":5,\"game\":\"ETS2\",\"ip\":\"37.187.170.151\",\"port\":42890,\"name\":\"Europe 3\",\"shortname\":\"EU #3\",\"online\":true,\"players\":338,\"maxplayers\":2300,\"speedlimiter\":1},{\"id\":6,\"game\":\"ETS2\",\"ip\":\"128.199.155.173\",\"port\":42860,\"name\":\"Asia\",\"shortname\":\"AS #1\",\"online\":true,\"players\":7,\"maxplayers\":500,\"speedlimiter\":1},{\"id\":7,\"game\":\"ETS2\",\"ip\":\"181.41.220.214\",\"port\":42860,\"name\":\"South America\",\"shortname\":\"SA #1\",\"online\":true,\"players\":141,\"maxplayers\":1500,\"speedlimiter\":0},{\"id\":9,\"game\":\"ATS\",\"ip\":\"37.187.170.151\",\"port\":42850,\"name\":\"Europe #1\",\"shortname\":\"EU #1\",\"online\":false,\"players\":0,\"maxplayers\":2000,\"speedlimiter\":1}]}");
                    case "/game_time/":
                        return new MockResponse().setResponseCode(200).setBody("{\"error\":false,\"game_time\":874703}");
                    case "/meetups/":
